# SkillFit-AI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LOCAL_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  docker-compose.dev.yml  docker-compose.yml  init-db.sql
backend/: .dockerignore  .env.production.template  Dockerfile  Procfile  create_db.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.production.txt  requirements.railway.txt  requirements.txt  sample_resume.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_applications_table.py  003_add_ats_fields.py  003_increase_source_url_length.py  004_increase_application_job_url_length.py  005_add_user_llm_preferences.py  006_add_resume_file_path.py  007_add_ats_fields.py  008_add_google_oauth.py  009_add_analytics.py  010_add_is_admin.py  011_add_generated_content_fields.py  012_add_usage_tracking_fields.py  013_add_soft_delete.py  014_add_tour_completed.py
backend/app/: main.py
backend/app/api/: analytics.py  applications.py  auth.py  health.py  jobs.py  linkedin.py  matches.py  resumes.py  schemas.py
backend/app/core/: auth.py  config.py  llm_providers.py  logging_config.py  storage.py
backend/app/models/: database.py  models.py
backend/app/services/: ats_analyzer.py  cover_letter_generator.py  email_service.py  interview_generator.py  job_matcher.py  job_scraper.py  linkedin_scraper.py  (+6 more)
backend/tests/: conftest.py  test_api_health.py  test_auth.py  test_llm_providers.py  test_resume_parser.py
(+67 files in other folders)
